--- a/public/css/dashboardStyle.css
+++ b/public/css/dashboardStyle.css
@@ -8,10 +8,38 @@ body {
 }
 
 .sample-image {
-  width: 25%;
+  width: 100%;
   border-bottom: 4px solid #4cbfee;
 }
 
 .navbar-default .navbar-nav>li.active-nav>a {
-  color: #3c91b6;
+  color: #4093D6;
+}
+
+.title {
+  color: #4093D6;
+  font-size: 20px;
+  padding-left: 15px;
+}
+
+.launchers {
+  background-color: white;
+  width: 300px;
+}
+
+.jumbotron {
+  background-color: #E3E8E4;
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 20px;
+}
+
+td {
+  padding: 10px 0;
+}
+
+td img{
+  vertical-align: top;
 }
