--- a/public/css/dashboardStyle.css
+++ b/public/css/dashboardStyle.css
@@ -24,7 +24,8 @@ body {
 
 .launchers {
   background-color: white;
-  width: 300px;
+  width: 100%;
+  height: 300px;
 }
 
 .jumbotron {
@@ -42,4 +43,10 @@ td {
 
 td img{
   vertical-align: top;
+}
+
+p.launch-title {
+  padding-top: 40px;
+  font-size: 14px;
+  text-align: center;
 }
