--- a/views/about.html
+++ b/views/about.html
@@ -1,1 +1,10 @@
-ABOUT
+<table>
+  <tr ng-repeat="eachQuestion in exampleQuestions">
+    <td>
+      {{eachQuestion}}
+    </td>
+    <td>
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </td>
+  </tr>
+</table>
