in the process of using jquery to hide and show answers

--- a/views/about.html
+++ b/views/about.html
@@ -1,10 +1,32 @@
-<table>
-  <tr ng-repeat="eachQuestion in exampleQuestions">
+<table ng-repeat="eachQuestionAndAnswer in exampleQuestions">
+  <tr class="allTheQuestions">
     <td>
-      {{eachQuestion}}
+      {{eachQuestionAndAnswer.Question}}
     </td>
     <td>
-      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="glyphicon glyphicon-chevron-down"></span>
+    </td>
+  </tr>
+  <tr>
+    <td class="allTheAnswers">
+      {{eachQuestionAndAnswer.Answer}}
     </td>
   </tr>
 </table>
+
+<script>
+  $('.allTheAnswers').hide();
+</script>
+
+
+<!-- PLAN OF ACTION
+
+click on one of the '.allTheQuestions'
+
+remove class 'active' from all td.allTheAnswers
+
+add class 'active' to the next tr > td.allTheAnswers
+
+make it so that everything with class 'active' is shown (this should mean that only one of the answers is shown at a time)
+
+-->
