ngshow and nghide being used to show and hide answers in bottom half of page - no jquery used in the end

--- a/public/css/dashboardStyle.css
+++ b/public/css/dashboardStyle.css
@@ -70,3 +70,11 @@ div.right-display {
   float: right;
   width: 60%;
 }
+
+.questionsAndAnswersTable {
+  width: 100%;
+}
+
+.questionAndAnswerColumn {
+  width: 80%;
+}
