--- a/views/manageAccount.html
+++ b/views/manageAccount.html
@@ -1,1 +1,22 @@
-MANAGE
+<p>Hmm, there's nothing here at the moment!</p>
+<p>Why not have a look at some of our recent tweets?</p>
+
+
+
+<a class="twitter-timeline" href="https://twitter.com/BCSGcloud" data-widget-id="645613774167252992">
+	Tweets by @BCSGcloud
+</a>
+
+<script>
+!function(d,s,id) {
+	var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
+	if(!d.getElementById(id)) {
+		js=d.createElement(s);
+		js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
+		fjs.parentNode.insertBefore(js,fjs);
+	}
+}(document,"script","twitter-wjs");
+
+twttr.widgets.load();
+
+</script>
