--- a/views/about.html
+++ b/views/about.html
@@ -8,7 +8,7 @@
         <a><span class="glyphicon glyphicon-chevron-down"></span></a>
       </td>
     </tr>
-    <tr class="allTheAnswers" id="{{$index}}" ng-show="eachQuestionAndAnswer.show" ng-hide="eachQuestionAndAnswer.show === false">
+    <tr class="allTheAnswers" ng-show="eachQuestionAndAnswer.show" ng-hide="eachQuestionAndAnswer.show === false">
       <td class="questionAndAnswerColumn">
         {{eachQuestionAndAnswer.answer}}
       </td>
