amended footer and updated README

--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <p class="text-muted">HELLO THERE, I'M THE FOOTER</p>
+    <p><strong>Terms of Use <span class="tiny-writing">|</span> Privacy Policy <span class="tiny-writing">|</span> Contact Us</strong></p>
+    <p class="copyright">Copyright 2015</p>
   </div>
 </footer>
