--- a/public/css/dashboardStyle.css
+++ b/public/css/dashboardStyle.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
@@ -83,6 +81,10 @@ div.right-display {
   margin-top: 34px;
 }
 
+.copyright {
+  color: #777;
+}
+
 table.questions-and-answers-table {
   width: 90%;
 }
@@ -114,6 +116,7 @@ div.left-display li {
 
 .each-question-row {
   border-top: 1px solid;
+  line-height: 30px;
 }
 
 .glyph {
@@ -127,6 +130,17 @@ div.left-display li {
 
 .container-fluid {
   margin-top: 40px;
+}
+
+.footer {
+  border-top: 1px solid #777;
+  margin-top: 4em;
+  padding-top: 2em;
+  font-size: 0.7em;
+}
+
+.tiny-writing {
+  font-size: 5px;
 }
 
 @media (max-width: 990px) {
