--- a/views/partials/launchers.html
+++ b/views/partials/launchers.html
@@ -4,7 +4,7 @@
       <tr>
         <td class="launch-table-column">
           <div class="launchers">
-            <img class="sample-image" src="public/images/creditChecker1.png">
+            <img id="first-image" class="sample-image" src="public/images/creditChecker1.png">
             <p class="launch-title">
               Credit Checker
             </p>
@@ -12,13 +12,13 @@
               <button class="btn btn-primary">Launch</button>
               Tips &amp; tutorials <span class="glyphicon glyphicon-chevron-right"></span>
             </p>
-            Upgrade
+            <a class="upgrade" href="#">Upgrade</a>
           </div>
         </td>
         <td class="launch-table-column"></td>
         <td class="launch-table-column">
           <div class="launchers">
-            <img class="sample-image" src="public/images/creditChecker2.png">
+            <img id="second-image" class="sample-image" src="public/images/creditChecker2.png">
             <p class="launch-title">
               Credit Checker
             </p>
